fix transition cards__covered

--- a/src/styles.css
+++ b/src/styles.css
@@ -74,7 +74,6 @@ body{
     z-index: 20;
     background-color: #000;
     transition: background-color  1s ease;
-    transition: transform .3s ease;
 }
 
 .cards__covered:hover{
